# Degururu

./: .gitignore  README.md  docker-compose.yml  opencode.json
.sisyphus/drafts/: degururu-full-implementation.md
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: main.py
backend/app/api/routers/: announcements.py  attendance.py  auth.py  schedules.py  scores.py  users.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  announcement.py  attendance.py  schedule.py  score.py  user.py
backend/app/schemas/: announcement.py  attendance.py  auth.py  common.py  schedule.py  score.py  user.py
backend/app/services/: announcement_service.py  attendance_service.py  auth_service.py  schedule_service.py  score_service.py  user_service.py
docs/: design.md  requirement.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: main.tsx
frontend/src/api/: announcements.ts  client.ts  schedules.ts  users.ts
frontend/src/app/: router.tsx
frontend/src/app/auth/: AuthProvider.tsx  guards.tsx  useAuth.ts
frontend/src/components/layout/: AppLayout.tsx  NavBar.tsx  SideMenu.tsx
frontend/src/pages/: AnnouncementDetailPage.tsx  AnnouncementsPage.tsx  AttendancePage.tsx  DashboardPage.tsx  LoginPage.tsx  ProfilePage.tsx  ScheduleDetailPage.tsx  SchedulesPage.tsx  ScoreTrendPage.tsx  TournamentMockPage.tsx
frontend/src/styles/: index.css
(+5 files in other folders)
